Error handling notification clarification. CSS change on alert in entry for readability. Alert entry box autosizing correctly.

--- a/public/css/sandbox.css
+++ b/public/css/sandbox.css
@@ -67,6 +67,13 @@ blockquote {
   border: 1px solid black;
   width:99.5%;
   margin-bottom:10px;
+  /*adding in other sizing things not normally in alertTableHorizontal but normally found in the .tablesorter-default*/
+  font: 12px/18px Arial, Sans-serif;
+  color: #333;
+  background-color: #fff;
+  border-spacing: 0;
+  margin: 10px 0 15px;
+  text-align: left;
 }
 
 .alertTableHorizontal > div {
